[gd_scene load_steps=3 format=3 uid="uid://hull_card_001"]

[ext_resource type="Script" path="res://scripts/hull/HullCard.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.4, 0.4, 1)

[node name="HullCard" type="Panel"]
custom_minimum_size = Vector2(350, 450)
offset_right = 350.0
offset_bottom = 450.0
theme_override_styles/panel = SubResource("StyleBoxFlat_card")
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TopSpacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="GridPreview" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
size_flags_horizontal = 4

[node name="HullName" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "CRUISER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridSize" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "8Ã—6 Grid"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BonusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.886275, 0.886275, 1)
theme_override_font_sizes/font_size = 18
text = "Balanced"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MiddleSpacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="SelectButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "SELECT"

[node name="BottomSpacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
